# qtandroidextensions

./: .gitignore  AndroidManifest.xml  CMakeLists.txt  README  README.txt  add_remotes.sh  build.sh  qtcreator.sh  update.sh
JNIUtils/: JNIUtils.pro  JclassPtr.cpp  JclassPtr.h  (+8 more)
QJniHelpers/: CMakeLists.txt  IJniObjectLinker.h  JniObjectLinker.cpp  JniObjectLinker.h  QAndroidQPAPluginGap.cpp  QAndroidQPAPluginGap.h  QJniHelpers.cpp  QJniHelpers.h  QJniHelpers.pri  QJniHelpers.pro  QJniLangUtils.cpp  QJniLangUtils.h  README.txt  TJniObjectLinker.h  files.pri
QJniHelpers/ru.dublgis.qjnihelpers/: ClassLoader.java
QtAndroidAccelerometer/: CMakeLists.txt  QAndroidAccelerometer.cpp  QAndroidAccelerometer.h  QtAndroidAccelerometer.pri
QtAndroidAccelerometer/ru.dublgis.androidaccelerometer/: AccelerometerProvider.java
QtAndroidAssets/: AndroidAssetsFileEngineHandler_p.cpp  AndroidAssetsFileEngineHandler_p.h  CMakeLists.txt  QAndroidAssetHandler.cpp  QAndroidAssetHandler.h  QAndroidAssetsHandler.cpp  QAndroidAssetsHandler.h
QtAndroidCompass/: CMakeLists.txt  QAndroidCompass.cpp  QAndroidCompass.h  QtAndroidCompass.pri
QtAndroidCompass/ru.dublgis.androidcompass/: CompassProvider.java  OrientationProvider.java  OrientationProviderInterface.java  OrientationRotationProvider.java
QtAndroidHelpers/: CMakeLists.txt  QAndroidAction.cpp  QAndroidAction.h  QAndroidConfiguration.cpp  QAndroidConfiguration.h  QAndroidContacts.cpp  QAndroidContacts.h  QAndroidDesktopUtils.cpp  QAndroidDesktopUtils.h  QAndroidDialog.cpp  QAndroidDialog.h  QAndroidDisplayListener.cpp  QAndroidDisplayListener.h  QAndroidDisplayMetrics.cpp  QAndroidDisplayMetrics.h  QAndroidExecutor.cpp  QAndroidExecutor.h  QAndroidFilePaths.cpp  QAndroidFilePaths.h  QAndroidGooglePlayServiceLocationProvider.cpp  QAndroidPartialWakeLocker.cpp  QAndroidPartialWakeLocker.h  QAndroidPowerManagerHelper.cpp  QAndroidPowerManagerHelper.h  QAndroidScreenInteractiveObserver.cpp  QAndroidScreenInteractiveObserver.h  QAndroidScreenLayoutHandler.cpp  QAndroidScreenLayoutHandler.h  QAndroidScreenLocker.cpp  QAndroidScreenLocker.h  QAndroidScreenOrientation.cpp  QAndroidScreenOrientation.h  QAndroidSharedPreferences.cpp  QAndroidSharedPreferences.h  QAndroidSpeechRecognizer.cpp  QAndroidSpeechRecognizer.h  QAndroidStorages.cpp  QAndroidStorages.h  QAndroidStorages_p.h  QAndroidToast.cpp  (+9 more)
QtAndroidHelpers/Mobility/: CellData.cpp  CellData.h  DataOperation.h  QAndroidBatteryDataProvider.cpp  QAndroidBatteryDataProvider.h  QAndroidCellDataProvider.cpp  QAndroidCellDataProvider.h  QAndroidWifiDataProvider.cpp  QAndroidWifiDataProvider.h  WifiData.cpp  WifiData.h
QtAndroidHelpers/QLocks/: QLock.cpp  QLockBase.h  QLockHandler.cpp  QLockHandler_p.h  QLock_p.h  QLockedObject.cpp  QLockedObject.h  QLockedObjectBase_p.h
QtAndroidHelpers/ru.dublgis.androidhelpers/: Action.java  AndroidScreenOrientationHelper.java  Contacts.java  DesktopUtils.java  DialogHelper.java  DirectoriesHelper.java  DisplayListener.java  GooglePlayServiceLocationProvider.java  HandlerExecutor.java  KeyboardHeightObserver.java  KeyboardHeightProvider.java  Log.java  PowerManagerHelper.java  ScreenInteractiveObserver.java  ScreenLayoutHandler.java  ScreenLocker.java  SharedPreferencesHelper.java  SystemNavigationBarInfo.java  ToastHelper.java  Vibrate.java  VoiceRecognitionListener.java  WakeLocker.java  WifiLocker.java  Zip.java
QtAndroidHelpers/ru.dublgis.androidhelpers/mobility/: BatteryListener.java  CellData.java  CellListener.java  WifiListener.java
QtAndroidLocation/: CMakeLists.txt  PositionInfoConvertor.cpp  PositionInfoConvertor.h  QAndroidGmsLocationProvider.cpp  QAndroidGmsLocationProvider.h  QAndroidPassiveGeoPosition.cpp  QAndroidPassiveGeoPosition.h  QGeoPositionInfoSourceAndroidGms.cpp  QGeoPositionInfoSourceAndroidGms.h  QGeoPositionInfoSourceAndroidNetwork.cpp  QGeoPositionInfoSourceAndroidNetwork.h  QGeoPositionInfoSourceAndroidPassive.cpp  QGeoPositionInfoSourceAndroidPassive.h  QGeoPositionInfoSourceAndroidSatellite.cpp  QGeoPositionInfoSourceAndroidSatellite.h  QLocationManagerProvidersListener.cpp  QLocationManagerProvidersListener.h  QNmeaListener.cpp  QNmeaListener.h  QtAndroidLocation.pri  QtAndroidLocation.qdoc
QtAndroidLocation/ru.dublgis.androidlocation/: BaseLocationProvider.java  GmsLocationProvider.java  LocationManagerProvidersListener.java  LocationManagerWrapper.java  NetworkLocationProvider.java  NmeaListener.java  PassiveLocationProvider.java  SatelliteLocationProvider.java
QtAndroidRuStoreHelper/: CMakeLists.txt  QAndroidRuStoreInAppUpdate.cpp  QAndroidRuStoreInAppUpdate.h  QtAndroidRuStoreHelper.pri
QtAndroidRuStoreHelper/ru.dublgis.rustorehelper/: RuStoreInAppUpdate.java
QtAndroidSensorManager/: CMakeLists.txt  QAndroidSensorManager.cpp  QAndroidSensorManager.h  QtAndroidSensorManager.pri
QtAndroidSensorManager/ru.dublgis.androidsensormanager/: SensorProvider.java
QtOffscreenViews/: .gitignore  CMakeLists.txt  QAndroidJniImagePair.cpp  QAndroidJniImagePair.h  QAndroidOffscreenEditText.cpp  QAndroidOffscreenEditText.h  QAndroidOffscreenView.cpp  QAndroidOffscreenView.h  QAndroidOffscreenWebView.cpp  QAndroidOffscreenWebView.h  QAndroidQPAPluginGap.cpp  QAndroidQPAPluginGap.h  QApplicationActivityObserver.cpp  QApplicationActivityObserver.h  QOpenGLTextureHolder.cpp  QOpenGLTextureHolder.h  QtOffscreenViews.pro  androidjnigraphics.pri  files.pri
QtOffscreenViews/QGraphicsWidgets/: QAndroidOffscreenViewGraphicsWidget.cpp  QAndroidOffscreenViewGraphicsWidget.h  QOffscreenEditTextGraphicsWidget.cpp  QOffscreenEditTextGraphicsWidget.h  QOffscreenWebViewGraphicsWidget.cpp  QOffscreenWebViewGraphicsWidget.h
QtOffscreenViews/QQuickViews/: CMakeLists.txt  QQuickAndroidOffscreenView.cpp  QQuickAndroidOffscreenView.h  QQuickOffscreenEditText.cpp  QQuickOffscreenEditText.h  QQuickOffscreenWebView.cpp  QQuickOffscreenWebView.h
QtOffscreenViews/ru.dublgis.offscreenview/: ClassLoader.java  OffscreenEditText.java  OffscreenView.java  OffscreenViewFactory.java  OffscreenViewHelper.java  OffscreenWebView.java  QJniImagePair.java
(+108 files in other folders)
